# hackathon-full-stack-template-main

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
.claude/agents/: api-contract-designer.md  backend-implementer.md  docker-containerizer.md  k8s-aiops-specialist.md  k8s-deployment-architect.md  neon-database-agent.md  todo-chat-agent.md  ui-designer.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0038046a8779_add_conversations_and_messages_tables_.py  1fdc137aba7b_add_advanced_task_management_fields.py  3e9cfe75efa0_create_users_and_tasks_tables.py  a2b3c4d5e6f7_add_user_specific_task_number.py  e1fe1dd186cb_add_oauth_fields_to_users_table.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  oauth.py  schemas.py
backend/app/ai/: README.md  __init__.py  agent.py  agent_old_backup.py  instructions.py  mcp_server.py  tools.py  tools_old_backup.py
backend/app/events/: __init__.py  handlers.py  publisher.py  schemas.py
backend/app/routers/: __init__.py  admin.py  auth.py  chat.py  events.py  tasks.py
backend/app/services/: __init__.py  state_store.py
backend/docs/: oauth-setup.md
backend/tests/: test_event_handlers.py  test_event_publisher.py
frontend/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  next.config.ts  package-lock.json  package.json
src/: main.py  storage.py  tasks.py  validation.py
tests/: test_storage.py  test_tasks.py  test_validation.py
(+170 files in other folders)
