[project]
name = "hackathon-todo-backend"
version = "0.1.0"
description = "FastAPI backend for Multi-User Authentication System with AI Chatbot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.13.0",
    "pyjwt>=2.10.0",
    "pydantic[email]>=2.10.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings==2.*",   # Settings management
    "passlib[bcrypt]==1.*",     # Password hashing
    "authlib==1.*",             # OAuth support
    "httpx==0.*",               # HTTP client for OAuth
    "openai==1.*",              # OpenAI API client
    "openai-agents>=0.0.3",     # OpenAI Agents SDK
    "python-dateutil==2.*",     # Date utilities for recurring tasks
    "slowapi>=0.1.9",
    "mcp>=1.0.0",
    "itsdangerous>=2.0.0",  # Required for session middleware
    # Phase V: Dapr integration dependencies
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]
